@@ -1,11 +1,10 @@
 package com.comet.opik.domain;
 
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreItem;
 import com.comet.opik.api.FeedbackScoreNames;
 import com.comet.opik.api.Project;
 import com.comet.opik.api.TraceThreadStatus;
-import com.comet.opik.api.error.ConflictException;
 import com.comet.opik.domain.threads.TraceThreadCriteria;
 import com.comet.opik.domain.threads.TraceThreadModel;
 import com.comet.opik.domain.threads.TraceThreadService;
@@ -14,8 +13,11 @@ import com.comet.opik.utils.WorkspaceUtils;
 import com.google.common.base.Preconditions;
 import com.google.inject.ImplementedBy;
 import com.google.inject.Singleton;
+import io.dropwizard.jersey.errors.ErrorMessage;
 import jakarta.inject.Inject;
 import jakarta.validation.constraints.NotNull;
+import jakarta.ws.rs.ClientErrorException;
+import jakarta.ws.rs.core.Response;
 import lombok.Builder;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
@@ -30,6 +32,8 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItemThread;
 import static com.comet.opik.utils.ErrorUtils.failWithNotFound;
 import static java.util.function.Predicate.not;
 import static java.util.stream.Collectors.groupingBy;
@@ -54,7 +58,7 @@ public interface FeedbackScoreService {
 
     Mono<FeedbackScoreNames> getProjectsFeedbackScoreNames(Set<UUID> projectIds);
 
-    Mono<Void> scoreBatchOfThreads(List<FeedbackScoreBatchItem> scores);
+    Mono<Void> scoreBatchOfThreads(List<FeedbackScoreBatchItemThread> scores);
 
     Mono<Void> deleteThreadScores(String projectName, String threadId, Set<String> names);
 
@@ -75,7 +79,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
     private final @NonNull TraceThreadService traceThreadService;
 
     @Builder(toBuilder = true)
-    record ProjectDto(Project project, List<FeedbackScoreBatchItem> scores) {
+    record ProjectDto<T extends FeedbackScoreItem>(Project project, List<T> scores) {
     }
 
     @Override
@@ -112,7 +116,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
         }
 
         // group scores by project name to resolve project itemIds
-        Map<String, List<FeedbackScoreBatchItem>> scoresPerProject = scores
+        Map<String, List<FeedbackScoreItem>> scoresPerProject = scores
                 .stream()
                 .map(score -> {
                     IdGenerator.validateVersion(score.id(), entityType.getType()); // validate span/trace id
@@ -121,7 +125,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                             .projectName(WorkspaceUtils.getProjectName(score.projectName()))
                             .build();
                 })
-                .collect(groupingBy(FeedbackScoreBatchItem::projectName));
+                .collect(groupingBy(FeedbackScoreItem::projectName));
 
         return projectService.retrieveByNamesOrCreate(scoresPerProject.keySet())
                 .map(ProjectService::groupByName)
@@ -130,23 +134,33 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                 .then();
     }
 
-    private Mono<Long> saveScoreBatch(EntityType entityType, List<ProjectDto> projects) {
+    private <T extends FeedbackScoreItem> Mono<Long> saveScoreBatch(EntityType entityType,
+            List<ProjectDto<T>> projects) {
         return Flux.fromIterable(projects)
                 .flatMap(projectDto -> dao.scoreBatchOf(entityType, projectDto.scores()))
                 .reduce(0L, Long::sum);
     }
 
-    private List<ProjectDto> mergeProjectsAndScores(Map<String, Project> projectMap,
-            Map<String, List<FeedbackScoreBatchItem>> scoresPerProject) {
+    private <T extends FeedbackScoreItem> List<ProjectDto<T>> mergeProjectsAndScores(
+            Map<String, Project> projectMap,
+            Map<String, List<T>> scoresPerProject) {
         return scoresPerProject.keySet()
                 .stream()
                 .map(projectName -> {
                     Project project = projectMap.get(projectName);
-                    return new ProjectDto(
+                    return new ProjectDto<>(
                             project,
                             scoresPerProject.get(projectName)
                                     .stream()
-                                    .map(item -> item.toBuilder().projectId(project.id()).build()) // set projectId
+                                    .map(item -> switch (item) {
+                                        case FeedbackScoreBatchItem tracingItem -> tracingItem.toBuilder()
+                                                .projectId(project.id()) // set projectId
+                                                .build();
+                                        case FeedbackScoreBatchItemThread threadItem -> threadItem.toBuilder()
+                                                .projectId(project.id()) // set projectId
+                                                .build();
+                                    }) // set projectId
+                                    .map(item -> (T) item)
                                     .toList());
                 })
                 .toList();
@@ -195,7 +209,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
     }
 
     @Override
-    public Mono<Void> scoreBatchOfThreads(@NonNull List<FeedbackScoreBatchItem> scores) {
+    public Mono<Void> scoreBatchOfThreads(@NonNull List<FeedbackScoreBatchItemThread> scores) {
         return processThreadsScoreBatch(scores);
     }
 
@@ -266,7 +280,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
         }));
     }
 
-    private Mono<Void> processThreadsScoreBatch(List<FeedbackScoreBatchItem> scores) {
+    private Mono<Void> processThreadsScoreBatch(List<FeedbackScoreBatchItemThread> scores) {
 
         if (scores.isEmpty()) {
             log.info("No scores provided for batch processing of threads");
@@ -274,12 +288,12 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
         }
 
         // group scores by project name to resolve project itemIds
-        Map<String, List<FeedbackScoreBatchItem>> scoresPerProject = scores
+        Map<String, List<FeedbackScoreBatchItemThread>> scoresPerProject = scores
                 .stream()
                 .map(score -> score.toBuilder()
                         .projectName(WorkspaceUtils.getProjectName(score.projectName()))
                         .build())
-                .collect(groupingBy(FeedbackScoreBatchItem::projectName));
+                .collect(groupingBy(FeedbackScoreItem::projectName));
 
         return projectService.retrieveByNamesOrCreate(scoresPerProject.keySet())
                 .map(ProjectService::groupByName)
@@ -289,13 +303,13 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                 .then();
     }
 
-    private Mono<Long> saveThreadScoreBatch(List<ProjectDto> projects) {
+    private Mono<Long> saveThreadScoreBatch(List<ProjectDto<FeedbackScoreBatchItemThread>> projects) {
         return Flux.fromIterable(projects)
                 .flatMap(projectDto -> {
                     // Collect unique thread IDs from the scores
                     Set<String> threadIds = projectDto.scores()
                             .stream()
-                            .map(FeedbackScoreBatchItem::threadId)
+                            .map(FeedbackScoreItem::threadId)
                             .collect(Collectors.toSet());
 
                     return Flux.fromIterable(threadIds)
@@ -311,13 +325,14 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                 .reduce(0L, Long::sum);
     }
 
-    private Mono<ProjectDto> validateThreadStatus(ProjectDto dto) {
+    private Mono<ProjectDto<FeedbackScoreBatchItemThread>> validateThreadStatus(
+            ProjectDto<FeedbackScoreBatchItemThread> dto) {
         Set<String> expectedCloseThreadIds = dto.scores.stream()
-                .map(FeedbackScoreBatchItem::threadId)
+                .map(FeedbackScoreItem::threadId)
                 .collect(Collectors.toSet());
 
         Set<UUID> ids = dto.scores.stream()
-                .map(FeedbackScoreBatchItem::id)
+                .map(FeedbackScoreItem::id)
                 .collect(Collectors.toSet());
 
         var criteria = TraceThreadCriteria.builder()
@@ -337,21 +352,28 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                         return Mono.just(dto); // All threads are closed, proceed with scoring
                     }
 
-                    return Mono.error(
-                            new ConflictException(
-                                    "Threads must be closed before scoring. Thread IDs are active: '[%s]'".formatted(
-                                            String.join(", ", openedThreads.isEmpty()
-                                                    ? expectedCloseThreadIds.stream().sorted().toList()
-                                                    : openedThreads.stream().sorted().toList()))));
+                    return Mono.error(new ClientErrorException(buildError(openedThreads, expectedCloseThreadIds)));
                 });
     }
 
-    private Mono<Map.Entry<String, UUID>> getOrCreateThread(ProjectDto projectDto, String threadId) {
+    private Response buildError(List<String> openedThreads, Set<String> expectedCloseThreadIds) {
+        return Response.status(Response.Status.CONFLICT).entity(
+                new ErrorMessage(Response.Status.CONFLICT.getStatusCode(),
+                        "Threads must be closed before scoring. Thread IDs are active: '[%s]'".formatted(
+                                String.join(", ", openedThreads.isEmpty()
+                                        ? expectedCloseThreadIds.stream().sorted().toList()
+                                        : openedThreads.stream().sorted().toList()))))
+                .build();
+    }
+
+    private Mono<Map.Entry<String, UUID>> getOrCreateThread(ProjectDto<FeedbackScoreBatchItemThread> projectDto,
+            String threadId) {
         return traceThreadService.getOrCreateThreadId(projectDto.project().id(), threadId)
                 .map(threadModelId -> Map.entry(threadId, threadModelId));
     }
 
-    private ProjectDto bindThreadModelId(ProjectDto projectDto, Map<String, UUID> threadIdMap) {
+    private ProjectDto<FeedbackScoreBatchItemThread> bindThreadModelId(
+            ProjectDto<FeedbackScoreBatchItemThread> projectDto, Map<String, UUID> threadIdMap) {
         return projectDto.toBuilder()
                 .project(projectDto.project())
                 .scores(projectDto.scores()
@@ -359,7 +381,7 @@ class FeedbackScoreServiceImpl implements FeedbackScoreService {
                         .map(score -> score.toBuilder()
                                 .id(threadIdMap.get(score.threadId())) // set thread model id
                                 .build())
-                        .toList())
+                        .collect(Collectors.toList()))
                 .build();
     }
 }
